# mm-lego

./: README.md  environment.yml  setup.cfg
mm_lego/: main.py  overlap_ablation.py
mm_lego/models/: __init__.py  lego.py  losses.py  model_utils.py  train_tasks.py  train_utils.py
mm_lego/models/baselines/: healnet.py  late_fusion.py  mcat.py  motcat.py  perceiver.py
mm_lego/models/baselines/multimodn/: __init__.py  encoders.py  multimodn.py
mm_lego/pipeline/: __init__.py  base.py  domain_transfer.py  fusion.py  tast_transfer.py
mm_lego/utils/: __init__.py  config.py  logging.py  timing.py  wandb.py
tests/: test_baselines.py  test_pipeline.py  test_trainer.py  test_utils.py
tutorial/: 01_Getting_Started.ipynb
