
[metadata]
name = mm_lego
version = 0.1.0
description = Multimodal model mergingn in PyTorch
long_description = file: README.md
author = Konstantin Hemker
author_email = konstantin.hemker@cl.cam.ac.uk
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
install_requires =
    colorlog
    einops
    jupyter
    lightning==2.1.3
    torch>=1.13.1
    torchvision
    pandas==1.5.3
    scikit-learn
    scikit-survival
    seaborn
    tqdm
    tables
    python-box
    pytest
    gdown
    h5py
    invoke
    transformers

[options.packages.find]
include = mm_lego